syntax = "proto3";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package profile.proto.v2;

option go_package = "profile/proto/v2;transaction";

message Transaction {
  string account_id = 1;
  string receiver = 2;
  double value = 3;
  string status = 4;

}

message ListTransaction {
  repeated Transaction transactions = 1;
  google.protobuf.Timestamp CreatedAt = 2;
  google.protobuf.Timestamp UpdatedAt = 3;
}

message TransactionRequest {
  string transaction_id = 1;
  string account_id = 2;
}

message ListTransactionRequest {
  repeated string transaction_id = 1;
}

service TransactionService {
  rpc CreateTransaction(Transaction) returns (Transaction) {
  }

  rpc FindTransactionById(TransactionRequest) returns (Transaction) {
  }

  rpc ListTransactions(ListTransactionRequest) returns (ListTransaction) {
  }
}

enum Type {
  cpf = 0;
  phone = 1;
  email = 2;
  random = 3;
}

message Key {
  string account = 1;
  string name = 2;
  Type type = 3;
  string agency = 4;
  string bank = 5;
}

message KeyResponse {
  string id = 1;
  string account = 2;
  string name = 3;
  Type type = 4;
  string agency = 5;
  string bank = 6;
}

message ListKeyRequest{
  repeated string key_id = 1;
}

message KeyRequest{
  string key_id = 1;
}

message ListKeys{
  repeated KeyResponse keys = 1;
}

service KeysService {
  rpc CreateKey(Key) returns (KeyResponse) {
  }

  rpc UpdateKey(Key) returns (KeyResponse) {
  }

  rpc ListKey(ListKeyRequest) returns (ListKeys) {
  }

  rpc DeleteKey(KeyRequest) returns (google.protobuf.Empty){
  }

  rpc FindKey(KeyRequest) returns (KeyResponse){
  }
}